--- a/src/SoundOffDrill/SoundOffDrill.csproj
+++ b/src/SoundOffDrill/SoundOffDrill.csproj
@@ -51,9 +51,8 @@
   <ItemGroup>
     <Compile Include="Biz\Card.cs" />
     <Compile Include="Biz\Drill.cs" />
-    <Compile Include="Biz\NonVowelCard.cs" />
-    <Compile Include="Biz\VowelCard.cs" />
-    <Compile Include="Data\VowelCardMapper.cs" />
+    <Compile Include="Biz\OuterCard.cs" />
+    <Compile Include="Data\JsonMapper.cs" />
     <Compile Include="GUI\TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
