--- a/src/SoundOffDrill/SoundOffDrill.csproj
+++ b/src/SoundOffDrill/SoundOffDrill.csproj
@@ -54,6 +54,18 @@
     <Compile Include="Biz\Drill.cs" />
     <Compile Include="Biz\ShuffleExtension.cs" />
     <Compile Include="Data\JsonMapper.cs" />
+    <Compile Include="GUI\DrillForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DrillForm.Designer.cs">
+      <DependentUpon>DrillForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\DrillSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DrillSettingsForm.Designer.cs">
+      <DependentUpon>DrillSettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +74,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\DrillForm.resx">
+      <DependentUpon>DrillForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DrillSettingsForm.resx">
+      <DependentUpon>DrillSettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +93,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\SoundOffDrill.Biz.Card.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
