--- a/src/SoundOffDrill/SoundOffDrill.csproj
+++ b/src/SoundOffDrill/SoundOffDrill.csproj
@@ -54,17 +54,11 @@
     <Compile Include="Biz\Drill.cs" />
     <Compile Include="Biz\ShuffleExtension.cs" />
     <Compile Include="Data\JsonMapper.cs" />
-    <Compile Include="GUI\DrillForm.cs">
+    <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\DrillForm.Designer.cs">
-      <DependentUpon>DrillForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\DrillSettingsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\DrillSettingsForm.Designer.cs">
-      <DependentUpon>DrillSettingsForm.cs</DependentUpon>
+    <Compile Include="GUI\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\TestForm.cs">
       <SubType>Form</SubType>
@@ -72,13 +66,11 @@
     <Compile Include="GUI\TestForm.Designer.cs">
       <DependentUpon>TestForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\WinFormHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GUI\DrillForm.resx">
-      <DependentUpon>DrillForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\DrillSettingsForm.resx">
-      <DependentUpon>DrillSettingsForm.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
